--- a/lab2/Java/exercicios/aquecimento/3/Makefile
+++ b/lab2/Java/exercicios/aquecimento/3/Makefile
@@ -3,7 +3,10 @@ JAVAC=javac
 # Comando da JVM
 JAVA=java
 # ROOT é a raiz dos diretórios com todos os roteiros de laboratórios
-ROOT=/home/filipe/git/compiladores-labs/lab2/Java
+# YEAR=$(shell pwd | grep -o '20..-.')
+# ROOT=/home/filipe/git/compiladores-labs/lab2/Java
+# ROOT=/home/fgasouza/compiladores-labs/lab2/Java
+ROOT=/home/fgasouza/compiladores-labs/lab2/Java
 # Caminho para o JAR do ANTLR em labs/tools
 ANTLR_PATH=$(ROOT)/tools/antlr-4.11.1-complete.jar
 # Opção de configuração do CLASSPATH para o ambiente Java
@@ -15,20 +18,21 @@ GRUN=$(JAVA) $(CLASS_PATH_OPTION) org.antlr.v4.gui.TestRig
 # Nome da gramática
 GRAMMAR_NAME=Q03
 # Diretório para aonde vão os arquivos gerados
-GEN_PATH=lexer
+GEN_PATH=parser
 
 # Executa o ANTLR e o compilador Java
 all: antlr javac
 	@echo "Done."
 # Executa o ANTLR para compilar a gramática
 antlr: $(GRAMMAR_NAME).g
-	$(ANTLR4) -o $(GEN_PATH) $(GRAMMAR_NAME).g
+	$(ANTLR4) -no-listener -o $(GEN_PATH) $(GRAMMAR_NAME).g
 # Executa o javac para compilar os arquivos gerados
 javac:
 	$(JAVAC) $(CLASS_PATH_OPTION) $(GEN_PATH)/*.java
-# Executa o lexer. Comando: $ make run FILE=arquivo_de_teste
+# Executa o parser. Comando: $ make run FILE=arquivo_de_teste
 run:
-	cd $(GEN_PATH) && $(GRUN) $(GRAMMAR_NAME) tokens -tokens $(FILE)
+	cd $(GEN_PATH) && $(GRUN) $(GRAMMAR_NAME) begin $(FILE) -gui
 # Remove os arquivos gerados pelo ANTLR
 clean:
 	@rm -rf $(GEN_PATH)
+
