starting var table

--- a/lab3/ezlang/Makefile
+++ b/lab3/ezlang/Makefile
@@ -4,7 +4,8 @@ JAVAC=javac
 JAVA=java
 # ROOT é a raiz dos diretórios com todos os roteiros de laboratórios
 YEAR=$(shell pwd | grep -o '20..-.')
-ROOT=/home/fgasouza/compiladores-labs/lab3
+# ROOT=/home/fgasouza/compiladores-labs/lab3
+ROOT=/home/filipe/git/compiladores-labs/lab3/
 # Caminho para o JAR do ANTLR em labs/tools
 ANTLR_PATH=$(ROOT)/tools/antlr-4.11.1-complete.jar
 # Opção de configuração do CLASSPATH para o ambiente Java
