--- a/lab7/ezlang/Makefile
+++ b/lab7/ezlang/Makefile
@@ -4,7 +4,8 @@ JAVAC=javac
 JAVA=java
 # ROOT é a raiz dos diretórios com todos os roteiros de laboratórios
 YEAR=$(shell pwd | grep -o '20..-.')
-ROOT=/home/juliana/compiladores-labs/lab7
+# ROOT=/home/juliana/compiladores-labs/lab7
+ROOT=/home/filipe/git/compiladores-labs/lab7
 # Caminho para o JAR do ANTLR em labs/tools
 ANTLR_PATH=$(ROOT)/tools/antlr-4.11.1-complete.jar
 # Opção de configuração do CLASSPATH para o ambiente Java
